Flexible contributors list - fix + gapRow and gapColumn for Flex

--- a/src/storybook/stand-alone-documentaion/welcome/contributor/contributor.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/contributor/contributor.scss
@@ -12,8 +12,9 @@
   &_image {
     position: absolute;
     width: 271px;
-    bottom: 0;
-    left: 0;
+    top: auto;
     right: 0;
+    bottom: 0;
+    left: 25px;
   }
 }
