--- a/src/storybook/stand-alone-documentaion/welcome/contributors/contributors.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/contributors/contributors.scss
@@ -4,11 +4,6 @@
 .monday-storybook-welcome-contributors {
   margin-top: 168px;
 
-  &_contributor-container {
-    width: 180px;
-    margin-top: -80px;
-  }
-
   &_contributor {
     &--bg-pattern-1 {
       background-image: url("../assets/BackgroundPattern1.png");
